--- a/Projekt3/Levi4.html
+++ b/Projekt3/Levi4.html
@@ -1,41 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="Levi.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="levi4.css">
+  <title>Document</title>
 </head>
+
 <body>
-    <div id="cont" class="container">
-      <h1 class="text-center">KISS</h1>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <div class="container">
-              <a class="navbar-brand" href="index.html"><img src="Képek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Metallica</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">KISS</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Gyuri.html">AC/DC</a>
-                  </li>           
-                </ul>
-              </div>
-            </div>          
-          </nav>
-
-
+  <div id="cont" class="container">
+    <h1 class="text-center">AC/DC</h1>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;"
+            class="rounded-pill"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="Mark.html">Metallica</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Levi.html">KISS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Gyuri.html">AC/DC</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="row">
+      <div class="col-8">
+        <h2>Paul Stanley</h2>
+        <p>Paul Stanley (Manhattan, New York, 1952. január 20. –) amerikai rockgitáros és énekes. Az államok egyik legnagyobb rocksztárja, aki a KISS énekes-gitárosaként a hetvenes évek eleje óta a csúcson van, jellegzetesen magas hangja még manapság is egyedülálló, és a zenekar egyik jellegzetessége. Legfontosabb öröksége között van az, hogy érzésre és szinte a törzsi összetartozásra építő rock zenei rajongás, mára nagyon komoly érdekeket mozgató üzletté alakult. A KISS-hez a kommersz zenei világot adta mindig is. Könnyen érthető, könnyed, egyszerű, nagyjából ez jellemzi stílusát. A KISS mellett eddig két szóló albumot adott ki. 1978-ban, amikor a KISS minden tagja, alaposan megtervezve szólóban dolgozott és 2006-ban, amikor kiadta a Live To Win című lemezét.</p>
+      </div>
+      <div class="col-4">
+        <br>
+        <img src="Kepek/PAULLL.jpg" alt="">
+      </div>
     </div>
+    <br>
+    <div class="row">
+      <div class="col-8">
+        <h2>Gene Simmons</h2>
+        <p>Gene Simmons (eredeti neve: Chaim Weitz, Tirat HaCarmel, Izrael, 1949. augusztus 25.) magyar származású, izraeli születésű amerikai zenész, basszusgitáros, a Kiss együttes egyik alapító tagja.
+
+          Édesanyja, Kovács Flóra, Magyarországon született. Édesapja, Witz Ferenc szintén magyar. Simmons beszél magyarul.</p>
+      </div>
+      <div class="col-4">
+        <img src="Kepek/Gene_Simmons_-_Azkena_Rock_Festival_2010_1.jpg" alt="">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-8">
+        <h2>Tommy Thayer</h2>
+        <p>Tommy Thayer (Portland, Oregon, 1960. november 7. –) amerikai gitáros, 2002-től a KISS együttes tagja. Alice Cooper, a Deep Purple, Rory Gallagher és a KISS hatására kezdett gitározni 13 évesen.
+
+          Tommy Thayer napjainkban a Kiss gitárosa. 2002-ben ő lett az űrember a zenekarban. Amikor Ace Frehley elhagyta az együttest, ő töltötte be a helyét. 2010-ben bejárták a Sonnic Boom Over Europe (Hangrobbanás Európa-szerte) című nagy európai turnét.
+          
+          A War Machine az, amiben Gene kiélheti a horror iránti rajongását. Kemény nóta, Tommy ebben is profi, szólója remek rock and roll témákat hoz, mintha a fiatal és pontos Ace lenne. Profi a szólója, ahogy profi a show elemnek szánt visszatérő ütemek lehangolt stílusa is.
+
+          Rudd Sonor dobokat és Paiste cintányérokat használ. Egyszerű "2/4-es" ütemekből álló stílusa a zenekar hangzásának egyik fontos védjegye. Mindazonáltal a rock egyik legmeghatározóbb dobosa.</p>
+      </div>
+      <div class="col-4">
+        <img id="tommy" src="Kepek/tommy thayler.jpg" alt="">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-8">
+        <h2>Eric Singer</h2>
+        <p>Eric Singer (született Eric Doyle Mensinger) (Cleveland, Ohio, 1958. május 12. –) amerikai dobos, egyike a rock legnagyobb alakjainak. Pillanatnyilag a Kiss zenekar és Alice Cooper állandó dobosa, de pályafutása alatt játszott több híres együttesben, és ismert művészek oldalán.Az énekes Eric Doyle Mensinger néven Clevelandben, Ohio államban született . Euklidészben, Ohio államban nőtt fel. 1976-ban érettségizett az Euklidész Gimnáziumban. [1] Apja, Johnny Mensinger zsidó német származású volt, és helyi big band vezetője volt, aki a környéken, valamint az Egyesült Államokból Európába tartó tengerjáró hajókon játszott. [2] [3] [4] [5] Eric testvére, Jon Mensinger a New York-i Mark Morris Dance Group vezető táncosa volt . [6] A fiatal Eric kiskorában kezdett dobolni, és olyan zenekarok inspirálták, mint a Humble Pie , a The Who , a Led Zeppelin , a Black Sabbath ., The Beatles and Queen és olyan dobosok , mint John Bonham , Keith Moon , Cozy Powell , Roger Taylor , Bill Ward és Buddy Rich .
+
+          Eric a King Musical Instrumentsnél dolgozott, mielőtt profi dobos lett volna.
+          
+          Singer első profi dobos munkája a clevelandi Beau Coup zenekarban volt. 1984-ben Lita Ford turnédobosa lett . </p>
+      </div>
+      <div class="col-4">
+        <img src="Kepek/250px-Esinger.jpg" alt="">
+      </div>
+    </div>
+
+
+
+  </div>
 </body>
+
 </html>
