--- a/Projekt3/Mark.html
+++ b/Projekt3/Mark.html
@@ -75,7 +75,7 @@
         <img id="kep2" src="Kepek/banda.jpg" alt="">
       </div>
       <div class="col-6">
-        <h1><u>Bandatagok</u></h1>
+        <h1><u> <a href="Mark2.html"> Bandatagok</a></u></h1>
         <ul>
           <li>
             <h5> James Alen Hetfield </h5>
